solve root overflow-hidden

--- a/e-commerce/src/index.css
+++ b/e-commerce/src/index.css
@@ -15,9 +15,7 @@
   color-scheme: light dark;
 }
 
-#root {
-  overflow: auto;
-}
+
 
 body {
   font-family: 'Kumbh Sans', sans-serif;
